crates/datarig-tui/tests/snapshots/ui_snapshots__mode_badge_colors_follow_the_mode.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: "lines.join(\"\\n\")"
---
  normal:  NORMAL 
  insert:  INSERT 
  visual:  VISUAL 
  v-line:  V-LINE 
 command:  COMMAND 
