crates/datarig-tui/tests/snapshots/ui_snapshots__password_prompt_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮╭ Workspace ───────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ✕   local-pg        ││  No open tabs                                        │"
"│    No saved password…││  Pick a connection in the explorer, or press         │"
"│▸ ○   v6              ││  Ctrl+O.                                             │"
"│▸ ○   分析-replica    ││                                                      │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                      ││  Enter      Connect and open a console               │"
"│       ╭ Password for local-pg ───────────────────────────────────────╮       │"
"│       │ No saved password for this profile                           │       │"
"│       │                                                              │       │"
"│       │ Password  ••                                                 │       │"
"│       │                                                              │       │"
"│       │ [x] Save to OS keychain (Space)                              │       │"
"│       │                                                              │       │"
"│       │                     [ OK ]     Cancel                        │       │"
"│       ╰──────────── Enter connect · Tab keychain option · Esc cancel ╯       │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" Connection failed: password missing                                         EN "
