crates/datarig-tui/tests/snapshots/ui_snapshots__password_prompt_every_time_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮╭ Workspace ───────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ○   local-pg        ││  No open tabs                                        │"
"│▸ ○   v6              ││  Pick a connection in the explorer, or press         │"
"│▸ ○   分析-replica    ││  Ctrl+O.                                             │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                      ││                                                      │"
"│                      ││  Enter      Connect and open a console               │"
"│                      ││  Ctrl+O     Quick connect                            │"
"│       ╭ Password for local-pg ───────────────────────────────────────╮       │"
"│       │ This profile asks for its password on every connect          │       │"
"│       │                                                              │       │"
"│       │ Password                                                     │       │"
"│       │                                                              │       │"
"│       │ Asked on every connect — never saved                         │       │"
"│       ╰────────────────────── Enter connect · Esc cancel (not saved) ╯       │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" Connecting to local-pg…                                                     EN "
