crates/datarig-tui/tests/snapshots/ui_snapshots__profile_form_advanced_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▸ work                                ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│▾ ●   local-pg                        ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│  ▾ datarig default                   ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ analytics                       ││  3                                                                                                                   │"
"│    ▸ public                          ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│    ▸ shop                            ││  5 FROM shop.orders o                                                                                                │"
"│▸ ○   分析-replica                    ││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│▸ ○   分析-replica                    ││  7 WHERE o.status = 'paid';                                                                                          │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                                      ││  8                                                                                                                   │"
"│                                      ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│                             ╭ Edit connection — 分析-replica ──────────────────────────────────────────────────────────────────╮                             │" Hidden by multi-width symbols: [(51, " "), (53, " ")]
"│                             │  Basic   SSH   Advanced                                                    Ctrl+N/Ctrl+P section │                             │"
"│                             │                                                                                                  │                             │"
"│                             │ SSL mode          ‹ require ›  ←/→ change                                                        │                             │"
"│                             │ Statement cache   ‹ off ›  ←/→ change · off behind PgBouncer in transaction mode                 │                             │"
"│                             │ Policy            prod-rules                          empty: default                             │                             │"
"│                             │ Color             ‹ ● red ›  ←/→ change · Enter list                                             │                             │"
"│                             │ Icon              ‹ the driver's icon ›  ←/→ change · Enter list                                 │                             │"
"│                             │ Folder            ‹ work/prod/ ›  ←/→ change · Enter list                                        │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                    Test    Save    Cancel                                                        │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰───────────────────────── Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯                             │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
