crates/datarig-tui/tests/snapshots/ui_snapshots__profile_form_errors_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: t.backend()
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾╭ New connection ──────────────────────────────────────────────────────────╮t│"
"│ │  Basic   SSH   Advanced                            Ctrl+N/Ctrl+P section │e│"
"│ │                                                                          │ │"
"│ │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   unsupported │ │"
"│ │ Name                                        required                     │ │"
"│▸│ Host              h                                                      │ │"
"│▸│ Port              5432                                                   │ │"
"│ │ User                                        required                     │ │"
"│ │ Password storage  ‹Keychain› File  Command  Env  Prompt   ←/→ change     │ │"
"│ │ Password                                    kept in the OS keychain      │ │"
"│ │ Database          db                                                     │ │"
"│ │                                                                          │t│"
"│ │ DSN               postgres://h/db?application_name=x                     │ │"
"│ │                   unsupported parameter “application_name” (only sslmod… │ │"
"│ │                                                                          │ │"
"│ │                    Test    Save    Cancel                                │t│"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ ╰─ Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯ │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
